deploy-node-app-docker/k8s-deployment/jwu-notebook-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "jwu-notebook"
  labels:
    name: "jwu-notebook"
